--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         <div class="header-content">
             <!-- Add your profile picture here -->
             <img src="./vaishu profile.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1>vaishnavi.R</h1>
-            <p>cloud computing</p>
+            <h1>VAISHNAVI R</h1>
+            <p>EVERYONE SHOULD LEARN CODING, IT TEACHES YOU HOW TO THINK</p>
         </div>
     </header>
 
@@ -114,14 +114,14 @@
     <section id="about">
         <div class="section-content">
             <h2>About Me</h2>
-            <p>hello everyone....this is vaishanvi i'm studing in chidambaram pillai college for women.</p>
+            <p>Hello everyone....This is VAISHNAVI I'm studing in Chidambaram Pillai College For Women.</p>
         </div>
     </section>
 
     <section id="education">
         <div class="section-content">
             <h2>Education</h2>
-            <p>bharathidasan university-computer science</p>
+            <p>Bharathidasan University- Bachelor of Science in Computer Science</p>
         </div>
     </section>
 
@@ -160,7 +160,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 vaishnavi.R</p>
+        <p>&copy; 2023 VAISHU</p>
     </footer>
 
     <script>
