--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
+             background-color: #b45dd6;
         }
 
         header {
