--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         }
 
         header {
-            background-color: #333;
-            color: #fff;
+            background-color: #580863;
+            color: #0e0202;
             text-align: center;
             padding: 2rem 0;
             position: relative; /* Add this */
@@ -34,7 +34,7 @@
         }
 
         nav {
-            background-color: #333;
+            background-color: #830e60;
             color: #fff;
             text-align: center;
         }
@@ -51,11 +51,11 @@
 
         nav ul li a {
             text-decoration: none;
-            color: #fff;
+            color: #f1ebe6;
         }
 
         .section-content {
-            background-color: #fff;
+            background-color: #b070bb;
             padding: 2rem;
             margin: 1rem;
             border-radius: 20px;
@@ -64,7 +64,7 @@
         }
 
         .download-button {
-            background-color: #333;
+            background-color: #0b010e;
             color: #fff;
             padding: 0.5rem 1rem;
             text-decoration: none;
@@ -75,13 +75,13 @@
         }
 
         .download-button:hover {
-            background-color: #555;
+            background-color: #4e097c;
         }
 
         footer {
             text-align: center;
             padding: 1rem 0;
-            background-color: #333;
+            background-color: #420847;
             color: #fff;
         }
 
